Update to TRP project.
I have made my project available to be viewed on the web.

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -53,7 +53,7 @@
                     <li>I will make an web-site based game that will be showcased and made available for play on this web-site.</li>
                     <li>I will test with other languages such as C#, Phython, and any others that may peak my interest.</li>
                 </ul>
-                <p>P.S. for those of you wondering the favicon for my site holds my initial. Its like a mini logo for me.</p>
+                <p>P.S. For those of you wondering about my favicon it holds my initials TSF. Its like a mini logo for me.</p>
             </div>
             <div id="projects">
                 <p>This will give a summary of the projects I have completed and which ones I am working on working on.</p>
@@ -62,7 +62,7 @@
                     I have made a small sample game called <a href="TRP.html" class="blue"><b class="TRP">TRP.</b></a> This is a top down dungeon dive game composed in the console using ASCII graphics.
                     The Hero can be named and has three stats: Health, Sword Power, and Magic Power. 
                     The game allows the user to maneuver the character through a 2-dimensional character array and displays the content to the screen.
-                    There are some un-working features that are planned to be fixed during the revamp.
+                    
                 </p>
                 <a href="GM.html" class="blue"><span class="GM">GM Tools</span></a>
                 <p>
