--- a/public_html/index.html
+++ b/public_html/index.html
@@ -34,8 +34,8 @@
         <div class="body">
             <div id="about">
                 <p>
-                    You may call me Taber Storm; I am a programmer currently in school working towards a B.S. degree in Computer Science.
-                    I make a living by working part time at an IT job at the school.
+                    I am Taber Storm; I am a programmer currently in school working towards a B.S. degree in Computer Science.
+                    I work part time in an IT job for my school.
                     I am currently expanding my skill set by making a web-site, and have many goals for the future of this web-site.
                     Eventually I would like this site to be able to share experiences and comment about thing I have done.
                 </p>    
@@ -76,10 +76,6 @@
             
             <div id="resume">
                 <p>Taber Storm Fitzgerald</p>
-                <p>I've had several jobs out of high school.
-                    Back in 2010 I worked part-time at Papa Murphy's. 
-                In 2011 I started going to school and got hired on with the Shasta 
-                college work study program.</p>
                 <p>I am currently working at Chico State University IT department</p>
                 <p>In this position I:</p>
                 <ul>
@@ -98,9 +94,10 @@
                     <li>Java Script</li>
                 </ul>
                 <p>I am always looking for internship possibilities.
-                    I would love to expand my skills in a business world environment.
+                   I would love to expand my skills in a business world environment.
                 </p>
                 <p>I can be contacted via email at: tabersays@yahoo.com</p>
+                <p>Or by phone at 1-530-736-0613</p>
             </div>
         </div>
         
