minor updates and comments

--- a/public_html/GM.html
+++ b/public_html/GM.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <!-- 
-    Document   : index
+    Document   : GM
     Created on : Apr 8, 2014, 6:59:12 PM
     Author     : Dr. Storm
     Description:
-        The main website page this holds all the info so far. The content shown is chosen by the js file
+        This is a project of mine, it has its own page because it has many pictures and i 
+dont want to slow down loading times as my website expands
 -->
 <html>
     <head>
-        <link rel="shortcut icon" href="/icon/favicon.ico" >
+        <link rel="shortcut icon" href="icon/favicon.ico" >
         <title >TSF</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
