--- a/public_html/index.html
+++ b/public_html/index.html
@@ -8,7 +8,7 @@
 -->
 <html>
     <head>
-        <link rel="shortcut icon" href="/icon/favicon.ico" >
+        <link rel="shortcut icon" href="icon/favicon.ico" >
         <title >TSF</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -32,7 +32,7 @@
             <h3 class="resume">Resume</h3>
         </div>
         <div class="body">
-            <div id="about">
+            <div id="about"><!--A short bio about me and my goals-->
                 <p>
                     I am Taber Storm; I am a programmer currently in school working towards a B.S. degree in Computer Science.
                     I work part time in an IT job for my school.
@@ -55,7 +55,7 @@
                 </ul>
                 <p>P.S. For those of you wondering about my favicon it holds my initials TSF. Its like a mini logo for me.</p>
             </div>
-            <div id="projects">
+            <div id="projects"><!--Stuff i am working on currently-->
                 <p>This will give a summary of the projects I have completed and which ones I am working on working on.</p>
                 <a href="TRP.html" class="TRP blue"><span class="TRP">TRP</span></a>
                 <p>
@@ -74,9 +74,9 @@
             </div>
             
             
-            <div id="resume">
+            <div id="resume"><!--I am always looking for an internship -wink- -->
                 <p>Taber Storm Fitzgerald</p>
-                <p>I am currently working at Chico State University IT department</p>
+                <p>I am currently working at Chico State University's IT department</p>
                 <p>In this position I:</p>
                 <ul>
                     <li>Resolve IT problems for students and staff</li>
@@ -96,7 +96,7 @@
                 <p>I am always looking for internship possibilities.
                    I would love to expand my skills in a business world environment.
                 </p>
-                <p>I can be contacted via email at: tabersays@yahoo.com</p>
+                <p>I can be contacted via email at: tabersays@gmail.com</p>
                 <p>Or by phone at 1-530-736-0613</p>
             </div>
         </div>
