Added my git hub link and some minor tweaks

--- a/public_html/GM.html
+++ b/public_html/GM.html
@@ -24,7 +24,7 @@ dont want to slow down loading times as my website expands
             <h2>The Storm Has Come!</h2>
         </div>
         <div class="left">
-            <a href="index.html" class="white"><h3 class="TRP">Return</h3></a>
+            <a href="index.html" class="white"><h3>Return</h3></a>
             <a href="TRP.html" class="white"><h3 class="TRP notSmall">TRP</h3></a>
             <a href="GM.html" class="white"><h3 class="GM notSmall">Gm Tools</h3></a>
         </div>
