--- a/public_html/TRP.html
+++ b/public_html/TRP.html
@@ -24,7 +24,7 @@ dont want to slow down loading times as my website expands
             <h2>The Storm Has Come!</h2>
         </div>
         <div class="left">
-            <a href="index.html" class="white"><h3 class="TRP">Return</h3></a>
+            <a href="index.html" class="white"><h3>Return</h3></a>
             <a href="TRP.html" class="white"><h3 class="TRP notSmall">TRP</h3></a>
             <a href="GM.html" class="white"><h3 class="GM notSmall">Gm Tools</h3></a>
         </div>
@@ -37,7 +37,9 @@ dont want to slow down loading times as my website expands
                     Then on load it reads it back in the same order. 
                     
             </p>
-            <p>Here is the program if you want to experience it.<a href="exe/GameProject.exe" target="_blank" class='blue'> TRP</a></p>
+            <p>For those of you who would like the source code you can find it at my github account:</p>
+            <a href="https://github.com/tabersays" class="blue">Here</a>
+            <!--<p>Here is the program if you want to experience it.<a href="exe/GameProject.exe" target="_blank" class='blue'> TRP</a></p>-->
             <p>Some other projects I have are:</p>
             <ul>
                 <li><a href="GM.html" class="blue GM">GM Tools</a></li>
