--- a/public_html/TRP.html
+++ b/public_html/TRP.html
@@ -56,6 +56,8 @@ dont want to slow down loading times as my website expands
             <img src="img/trpPower.png">
             <p>Fight!!!!</p>
             <img src="img/trpBattle.png">
+            <p>TSF</p>
+            <img src="img/androidButton.png">
             
                      
         </div>
