Added header to change whenever it is mothers day
other minor changes to javascripting stuff

--- a/public_html/GM.html
+++ b/public_html/GM.html
@@ -21,12 +21,12 @@ dont want to slow down loading times as my website expands
     <body>
         
         <div class="top">
-            <h2>The Storm Has Come!</h2>
+            <h2 id="header">The Storm Has Come!</h2>
         </div>
         <div class="left">
-            <a href="index.html" class="white"><h3>Return</h3></a>
-            <a href="TRP.html" class="white"><h3 class="TRP notSmall">TRP</h3></a>
-            <a href="GM.html" class="white"><h3 class="GM notSmall">Gm Tools</h3></a>
+            <a href="index.html" class="white click"><h3>Return</h3></a>
+            <a href="TRP.html" class="white click"><h3 class="TRP notSmall">TRP</h3></a>
+            <a href="GM.html" class="white click"><h3 class="GM notSmall">Gm Tools</h3></a>
         </div>
         <div class="body">
             
