--- a/public_html/index.html
+++ b/public_html/index.html
@@ -60,14 +60,14 @@
                 <p>This will give a summary of the projects I have completed and which ones I am working on working on.</p>
                 <a href="TRP.html" class="blue click"><span class="TRP">TRP</span></a>
                 <p>
-                    I have made a small sample game called <a href="TRP.html" class="blue"><b class="TRP">TRP.</b></a> This is a top down dungeon dive game composed in the console using ASCII graphics.
+                    I have made a small sample game called <a href="TRP.html" class="blue click"><b class="TRP">TRP.</b></a> This is a top down dungeon dive game composed in the console using ASCII graphics.
                     The Hero can be named and has three stats: Health, Sword Power, and Magic Power. 
                     The game allows the user to maneuver the character through a 2-dimensional character array and displays the content to the screen.
                     
                 </p>
                 <a href="GM.html" class="blue click"><span class="GM">GM Tools</span></a>
                 <p>
-                    I have an app in progress for the Android <a href="GM.html" class="blue"> <b class="GM">Gm Tools.</b></a>
+                    I have an app in progress for the Android <a href="GM.html" class="blue click"> <b class="GM">Gm Tools.</b></a>
                     The tools will keep track of the characters initiative.
                     It will store basic information about the characters.
                     It will have a text random dice roller.
