--- a/public_html/GM.html
+++ b/public_html/GM.html
@@ -25,9 +25,9 @@ dont want to slow down loading times as my website expands
         </div>
         <div class="left">
             <a href="index.html" class="white click"><h3>Return</h3></a>
-            <a href="TRP.html" class="white click"><h3 class="TRP notSmall">TRP</h3></a>
-            <a href="GM.html" class="white click"><h3 class="GM notSmall">Gm Tools</h3></a>
-            <a href="CrypTrd.html" class="white click"><h3 class="CRPTD notSmall">CryptsyTrader</h3></a>
+            <a href="TRP.html" class="white click TRP notSmall"><h3>TRP</h3></a>
+            <a href="GM.html" class="white click GM notSmall active"><h3>Gm Tools</h3></a>
+            <a href="CrypTrd.html" class="white click CRPTD notSmall"><h3>CryptsyTrader</h3></a>
         </div>
         <div class="body">
             
