--- a/public_html/index.html
+++ b/public_html/index.html
@@ -28,7 +28,7 @@
             <h3 class="projects click">Projects</h3>
             <a href="TRP.html" class="TRP notSmall white click"><h3 >TRP</h3></a>
             <a href="GM.html" class="GM notSmall white click"><h3>Gm Tools</h3></a>
-            <a href="CrypTrd.html" class="CRPTD white click"><h3 class="notSmall">CryptsyTrader</h3></a>
+            <a href="CrypTrd.html" class="CRPTD white click notSmall"><h3>CryptsyTrader</h3></a>
             <h3 class="resume click">&nbsp;Resume&nbsp;</h3>
         </div>
         
