A few little updates

--- a/public_html/CrypTrd.html
+++ b/public_html/CrypTrd.html
@@ -17,7 +17,7 @@ and open the template in the editor.
  <body>
         
         <div class="top">
-            <h2 id="header">The Storm Has Come!</h2>
+            <h2 id="header">Taber and Seth's Cryptsy Trader</h2>
         </div>
         <div class="left">
             <a href="index.html" class="white click"><h3>Return</h3></a>
@@ -33,6 +33,8 @@ and open the template in the editor.
                     It uses your key and secrete to authenticate, and these can be set using the QR scanner.
                     This app has small banner adds.
             </p>
+            <p>If you want the app, it can be found:</p>
+            <a href='https://play.google.com/store/apps/details?id=com.Kalieki.CryptsyTrader' class='blue'>Here</a>
             <p>Other projects include:</p>
             <ul>
                 <li><a href="TRP.html" class="blue TRP click">TRP</a></li>
