--- a/public_html/index.html
+++ b/public_html/index.html
@@ -4,7 +4,7 @@
     Created on : Apr 8, 2014, 6:59:12 PM
     Author     : Dr. Storm
     Description:
-        The main website page this holds all the info so far. The content shown is chosen by the js file
+        The main website page this holds all the info so far. The content shown is chosen by the js file. My projects get there own HTML file due to all the pictures
 -->
 <html>
     <head>
@@ -20,7 +20,7 @@
     <body>
         
         <div class="top">
-            <h2 id="header">The Storm Has Come!</h2>
+            <h2 id="header">Welcome to the site of Taber Storm!</h2>
         </div>
         
         <div class="left">
