--- a/public_html/GM.html
+++ b/public_html/GM.html
@@ -21,7 +21,7 @@ dont want to slow down loading times as my website expands
     <body>
         
         <div class="top">
-            <h2 id="header">The Storm Has Come!</h2>
+            <h2 id="header">Taber's GM Tools</h2>
         </div>
         <div class="left">
             <a href="index.html" class="white click"><h3>Return</h3></a>
@@ -34,7 +34,7 @@ dont want to slow down loading times as my website expands
             <p>I have an app in progress for the Android Gm Tools.
                     The tools will keep track of the characters initiative.
                     It will store basic information about the characters.
-                    It will have a text random dice roller.!</p>
+                    It will have a text random dice roller.</p>
             <p>Some other projects I have done:</p>
             <ul>
                 <li><a href="CrypTrd.html" class="blue CRPTD click">Cryptsy Trader</a></li>
