--- a/public_html/TRP.html
+++ b/public_html/TRP.html
@@ -21,7 +21,7 @@ dont want to slow down loading times as my website expands
     <body>
         
         <div class="top">
-            <h2 id="header">The Storm Has Come!</h2>
+            <h2 id="header">Taber's TRP</h2>
         </div>
         <div class="left">
             <a href="index.html" class="white click"><h3>Return</h3></a>
