Slight updates to content

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -13,7 +13,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         
-        <LINK href="mystyle.css" rel="stylesheet" type="text/css" id="styleType">
+        <link href="mystyle.css" rel="stylesheet" type="text/css" id="styleType">
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script><!--This links me to googles java script-->
         <script src="myjavascript.js"></script><!--My java script file-->
     </head>
@@ -52,7 +52,7 @@
                     <li>I will complete the Gm Tools and add it to the android marketplace and make it available for free with no adds.</li>
                     <li>I will re-work some of my previous programs, expanding my TRP Adventure game and adding graphics.</li>
                     <li>I will make an web-site based game that will be showcased and made available for play on this web-site.</li>
-                    <li>I will test with other languages such as C#, Phython, and any others that may peak my interest.</li>
+                    <li>I will test with other languages such as Phython, and any others that may peak my interest.</li>
                 </ul>
                 <p>P.S. For those of you wondering about my favicon it holds my initials TSF. Its like a mini logo for me.</p>
             </div>
@@ -93,14 +93,16 @@
                 <ul>
                     <li>Resolve IT problems for students and staff</li>
                     <li>Provide on phone support for students and staff</li>
+                    <li>Provide on site support for school staff</li>
                     <li>Supervise computer labs</li>
                     <li>Maintain printers</li>
                 </ul>
                 <p>I have experienced programming in several languages including:</p>
                 <ul>
                     <li>C++</li>
+                    <li>C#</li>
                     <li>Java</li>
-                    <li>Android</li>
+                    <li>Android using Java and XML</li>
                     <li>HTML 5</li>
                     <li>CSS 3</li>
                     <li>Java Script</li>
