Add angularJs test
Was testing with angularJs it is not working well yet

--- a/public_html/TRP.html
+++ b/public_html/TRP.html
@@ -29,6 +29,7 @@ dont want to slow down loading times as my website expands
             <a href="CrypTrd.html" class="CRPTD white click notSmall"><h3>CryptsyTrader</h3></a>
             <a href="TRP.html" class="TRP notSmall white click active"><h3 >TRP</h3></a>
             <a href="GM.html" class="GM notSmall white click"><h3>Gm Tools</h3></a>
+            <a href="test.html" class="notSmall white click"><h3>AngularJS</h3></a>
             <a href="calendar.html" class="notSmall white click"><h3>Schedule</h3></a>
             <a href="resume.html" class="resume notSmall white click"><h3 >Resume</h3></a>
         </div>
