--- a/public_html/index.html
+++ b/public_html/index.html
@@ -29,6 +29,7 @@
             <a href="CrypTrd.html" class="CRPTD white click notSmall"><h3>CryptsyTrader</h3></a>
             <a href="TRP.html" class="TRP notSmall white click"><h3 >TRP</h3></a>
             <a href="GM.html" class="GM notSmall white click"><h3>Gm Tools</h3></a>
+            <a href="test.html" class="notSmall white click"><h3>AngularJS</h3></a>
             <a href="calendar.html" class="notSmall white click"><h3>Schedule</h3></a>
             <a href="resume.html" class="resume notSmall white click"><h3 >Resume</h3></a>
         </div>
@@ -36,7 +37,7 @@
         <div class="body">
             <div id="about"><!--A short bio about me and my goals-->
                 <p>
-                    My name Taber Storm Fitzgerald and I am a programmer currently in school working towards a B.S. degree in Computer Science.
+                    My name is Taber Storm Fitzgerald and I am a programmer currently in school working towards a B.S. degree in Computer Science.
                     I work part time in an IT job for my school.
                     I am currently expanding my skill set by making a web-site, and have many goals for the future of this web-site.
                     Eventually I would like this site to be able to share experiences and comment about thing I have done.
