--- a/public_html/CrypTrd.html
+++ b/public_html/CrypTrd.html
@@ -25,6 +25,7 @@ and open the template in the editor.
             <a href="CrypTrd.html" class="CRPTD white click notSmall active"><h3>CryptsyTrader</h3></a>
             <a href="TRP.html" class="TRP notSmall white click"><h3 >TRP</h3></a>
             <a href="GM.html" class="GM notSmall white click"><h3>Gm Tools</h3></a>
+            <a href="test.html" class="notSmall white click"><h3>AngularJS</h3></a>
             <a href="calendar.html" class="notSmall white click"><h3>Schedule</h3></a>
             <a href="resume.html" class="resume notSmall white click"><h3 >Resume</h3></a>
         </div>
