--- a/public_html/calendar.html
+++ b/public_html/calendar.html
@@ -29,13 +29,16 @@ dont want to slow down loading times as my website expands
             <a href="CrypTrd.html" class="CRPTD white click notSmall"><h3>CryptsyTrader</h3></a>
             <a href="TRP.html" class="TRP notSmall white click"><h3 >TRP</h3></a>
             <a href="GM.html" class="GM notSmall white click"><h3>Gm Tools</h3></a>
+            <a href="test.html" class="notSmall white click"><h3>AngularJS</h3></a>
             <a href="calendar.html" class="notSmall white click active"><h3>Schedule</h3></a>
             <a href="resume.html" class="resume notSmall white click"><h3 >Resume</h3></a>
         </div>
         <div class="body">
             
             <iframe src="https://www.google.com/calendar/embed?mode=WEEK&amp;height=600&amp;wkst=2&amp;bgcolor=%23FFFFFF&amp;src=tabersays%40gmail.com&amp;color=%232952A3&amp;ctz=America%2FLos_Angeles" style=" border-width:0 " width="800" height="600" frameborder="0" scrolling="no"></iframe>
-            
+            <iframe src="https://www.google.com/calendar/embed?src=creanjames%40gmail.com&ctz=America/Los_Angeles" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+            <p>Chue's Schedule</p>
+            <img src="img/chue.png">
             <p>----------------------------------------------------------</p>
             <p>"Fantasy is not a crime, find your castle in the sky!"</p>
             <p>DJ Satomi Castle in the Sky.</p>
