new functionality on angularJs test

--- a/public_html/test.html
+++ b/public_html/test.html
@@ -39,8 +39,8 @@
     <div class="body">
         <div ng-app="app.directive.bossy.slider">
             <div ng-controller="SliderController">
-                <bossy-slider></bossy-slider>
-                <bossy-slider></bossy-slider>
+                <bossy-slider options='vertical'></bossy-slider>
+                <bossy-slider options="horizantal"></bossy-slider>
             </div>
         </div>
     </div>
