--- a/test.html
+++ b/test.html
@@ -25,23 +25,37 @@
         <h2 id="header">Welcome to the site of Taber Storm!</h2>
     </div>
 
-    <div class="left">
+    <div class="left"id="nav">
         <a href="index.html" class="about notSmall white click"><h3>About</h3></a>
         <a href="projects.html" class="projects notSmall white click"><h3>Projects</h3></a>
         <a href="CrypTrd.html" class="CRPTD white click notSmall"><h3>CryptsyTrader</h3></a>
         <a href="TRP.html" class="TRP notSmall white click"><h3>TRP</h3></a>
         <a href="GM.html" class="GM notSmall white click"><h3>Gm Tools</h3></a>
-        <a href="test.html" class="notSmall white click"><h3>AngularJS</h3></a>
+        <a href="test.html" class="notSmall white click active"><h3>AngularJS</h3></a>
         <a href="calendar.html" class="notSmall white click"><h3>Schedule</h3></a>
         <a href="resume.html" class="resume notSmall white click"><h3>Resume</h3></a>
     </div>
 
     <div class="body">
+
+
         <div ng-app="app.directive.bossy.slider">
-            <div ng-controller="SliderController">
-                <bossy-slider options='vertical'></bossy-slider>
-                <bossy-slider options="horizantal"></bossy-slider>
-            </div>
+
+            <p>
+                This is a work in progress of a slider widget. This widget is using AngularJS and is not implementing
+                JQuery. That said it is still under progress. This widget will be part of a collection of widgets from
+                the Bossy UI project which can be found <a href="https://github.com/buildcom/BossyUI" class="blue">here.</a>
+                Go check it out!
+            </p>
+            <bossy-slider  min="10" max="30" ng-model="mine2"></bossy-slider>
+            <p>The value is {{mine2}}!</p>
+            <bossy-slider orientation="vertical" ng-model="mine3"></bossy-slider>
+            <p>The value is {{mine3}}!</p>
+            <bossy-slider min="-5" max="0" ng-model="mine4"></bossy-slider>
+            <p>The value is {{mine4}}!</p>
+            <p></p>
+            <p>They add up to {{mine + mine2 + mine3 + mine4}}</p>
+
         </div>
     </div>
 
