remove unneeded folder/adds few changes in content

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <p>
                     Currently this site is built by adding content to an HTML document, 
                     styling and positioning the content in a CSS document, 
-                    and dynamically showing/hiding content and changing styles using JQuery and JavaScript.               
+                    and dynamically change information and help with style in JQuery/JavaScript.
                 </p>
                 <p>Here is a list of plans I have.</p>
                 <ul>
