--- a/test.html
+++ b/test.html
@@ -44,7 +44,7 @@
             <p>
                 This is a work in progress of a slider widget. This widget is using AngularJS and is not implementing
                 JQuery. That said it is still under progress. This widget will be part of a collection of widgets from
-                the Bossy UI project which can be found <a href="https://github.com/buildcom/BossyUI" class="blue">here.</a>
+                the Bossy UI project which can be found <a href="https://github.com/buildcom/BossyUI" class="blue click">here.</a>
                 Go check it out!
             </p>
             <bossy-slider  min="10" max="30" ng-model="mine2"></bossy-slider>
