--- a/test.html
+++ b/test.html
@@ -16,6 +16,7 @@
     <link href="mystyle.css" rel="stylesheet" type="text/css" id="styleType">
 
     <script src="myjavascript.js"></script><!--My java script file-->
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-rc.3/angular.js"></script>
     <script src="bossy.slider.js"></script>
 </head>
@@ -66,8 +67,7 @@
             <p>The value is {{mine7}}!</p>
 
             <br>
-            <input type="checkbox" ng-model="checked" ng-init="checked=true" />
-            <p ng-if="checked">The slider supports several options such as the fill bar color, slider circle color, step size, max, and
+            <p>The slider supports several options such as the fill bar color, slider circle color, step size, max, and
                 min to name a few</p>
             <br>
 
