Small content update

--- a/resume.html
+++ b/resume.html
@@ -54,7 +54,9 @@
                     <li>HTML 5</li>
                     <li>CSS 3</li>
                     <li>Java Script</li>
+                    <li>Ruby on Rails</li>
                 </ul>
+                <p>I am familiar with Windows, Mac, and Linux Operating Systems.</p>
                 <p>I am always looking for internship possibilities.
                    I would love to expand my skills in a business world environment.
                 </p>
