Changes some style

--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
 
     <div id="main" class="col-xs-12 col-sm-10">
 
-        <div ng-view></div>
+        <br>
+
+        <div ng-view class="container"></div>
 
     </div>
 </div>
