--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <script src="js/bossy.slider.js"></script>
     <script src="js/navbar.js"></script>
     <script src="js/script.js"></script>
+    <base href="/">
 </head>
 
 <div class="row">
